--- a/ProjectSettings/Input.config
+++ b/ProjectSettings/Input.config
@@ -1,220 +1,101 @@
 {
   "Actions": [
     {
-      "Name": "Forward",
-      "GroupName": "Movement",
+      "Name": "W",
+      "GroupName": "TopDownController",
       "Title": null,
       "KeyboardCode": "W",
       "GamepadCode": "None"
     },
     {
-      "Name": "Backward",
-      "GroupName": "Movement",
+      "Name": "S",
+      "GroupName": "TopDownController",
       "Title": null,
       "KeyboardCode": "S",
       "GamepadCode": "None"
     },
     {
-      "Name": "Left",
-      "GroupName": "Movement",
+      "Name": "A",
+      "GroupName": "TopDownController",
       "Title": null,
       "KeyboardCode": "A",
       "GamepadCode": "None"
     },
     {
-      "Name": "Right",
-      "GroupName": "Movement",
+      "Name": "D",
+      "GroupName": "TopDownController",
       "Title": null,
       "KeyboardCode": "D",
       "GamepadCode": "None"
     },
     {
-      "Name": "Jump",
-      "GroupName": "Movement",
+      "Name": "Space",
+      "GroupName": "TopDownController",
       "Title": null,
-      "KeyboardCode": "space",
-      "GamepadCode": "A"
-    },
-    {
-      "Name": "Run",
-      "GroupName": "Movement",
-      "Title": null,
-      "KeyboardCode": "shift",
-      "GamepadCode": "LeftJoystickButton"
-    },
-    {
-      "Name": "Walk",
-      "GroupName": "Movement",
-      "Title": null,
-      "KeyboardCode": "alt",
+      "KeyboardCode": "SPACE",
       "GamepadCode": "None"
     },
     {
-      "Name": "Duck",
-      "GroupName": "Movement",
+      "Name": "Shift",
+      "GroupName": "TopDownController",
       "Title": null,
-      "KeyboardCode": "ctrl",
-      "GamepadCode": "B"
+      "KeyboardCode": "SHIFT",
+      "GamepadCode": "None"
     },
     {
-      "Name": "Attack1",
-      "GroupName": "Actions",
-      "Title": "Primary Attack",
-      "KeyboardCode": "mouse1",
-      "GamepadCode": "RightTrigger"
-    },
-    {
-      "Name": "Attack2",
-      "GroupName": "Actions",
-      "Title": "Secondary Attack",
-      "KeyboardCode": "mouse2",
-      "GamepadCode": "LeftTrigger"
-    },
-    {
-      "Name": "Reload",
-      "GroupName": "Actions",
+      "Name": "Alt",
+      "GroupName": "TopDownController",
       "Title": null,
-      "KeyboardCode": "r",
-      "GamepadCode": "X"
+      "KeyboardCode": "ALT",
+      "GamepadCode": "None"
     },
     {
-      "Name": "Use",
-      "GroupName": "Actions",
+      "Name": "Ctrl",
+      "GroupName": "TopDownController",
       "Title": null,
-      "KeyboardCode": "e",
-      "GamepadCode": "Y"
-    },
-    {
-      "Name": "Slot1",
-      "GroupName": "Inventory",
-      "Title": "Slot #1",
-      "KeyboardCode": "1",
-      "GamepadCode": "DpadWest"
-    },
-    {
-      "Name": "Slot2",
-      "GroupName": "Inventory",
-      "Title": "Slot #2",
-      "KeyboardCode": "2",
-      "GamepadCode": "DpadEast"
-    },
-    {
-      "Name": "Slot3",
-      "GroupName": "Inventory",
-      "Title": "Slot #3",
-      "KeyboardCode": "3",
-      "GamepadCode": "DpadSouth"
-    },
-    {
-      "Name": "Slot4",
-      "GroupName": "Inventory",
-      "Title": "Slot #4",
-      "KeyboardCode": "4",
+      "KeyboardCode": "CTRL",
       "GamepadCode": "None"
     },
     {
-      "Name": "Slot5",
-      "GroupName": "Inventory",
-      "Title": "Slot #5",
-      "KeyboardCode": "5",
-      "GamepadCode": "None"
-    },
-    {
-      "Name": "Slot6",
-      "GroupName": "Inventory",
-      "Title": "Slot #6",
-      "KeyboardCode": "6",
-      "GamepadCode": "None"
-    },
-    {
-      "Name": "Slot7",
-      "GroupName": "Inventory",
-      "Title": "Slot #7",
-      "KeyboardCode": "7",
-      "GamepadCode": "None"
-    },
-    {
-      "Name": "Slot8",
-      "GroupName": "Inventory",
-      "Title": "Slot #8",
-      "KeyboardCode": "8",
-      "GamepadCode": "None"
-    },
-    {
-      "Name": "Slot9",
-      "GroupName": "Inventory",
-      "Title": "Slot #9",
-      "KeyboardCode": "9",
-      "GamepadCode": "None"
-    },
-    {
-      "Name": "Slot0",
-      "GroupName": "Inventory",
-      "Title": "Slot #0",
-      "KeyboardCode": "0",
-      "GamepadCode": "None"
-    },
-    {
-      "Name": "SlotPrev",
-      "GroupName": "Inventory",
-      "Title": "Previous Slot",
-      "KeyboardCode": "mouse4",
-      "GamepadCode": "SwitchLeftBumper"
-    },
-    {
-      "Name": "SlotNext",
-      "GroupName": "Inventory",
-      "Title": "Next Slot",
-      "KeyboardCode": "mouse5",
-      "GamepadCode": "SwitchRightBumper"
-    },
-    {
-      "Name": "View",
-      "GroupName": "Other",
+      "Name": "E",
+      "GroupName": "TopDownController",
       "Title": null,
-      "KeyboardCode": "C",
-      "GamepadCode": "RightJoystickButton"
-    },
-    {
-      "Name": "Voice",
-      "GroupName": "Other",
-      "Title": null,
-      "KeyboardCode": "v",
+      "KeyboardCode": "E",
       "GamepadCode": "None"
     },
     {
-      "Name": "Drop",
-      "GroupName": "Other",
-      "Title": null,
-      "KeyboardCode": "g",
-      "GamepadCode": "None"
-    },
-    {
-      "Name": "Flashlight",
-      "GroupName": "Other",
-      "Title": null,
-      "KeyboardCode": "f",
-      "GamepadCode": "DpadNorth"
-    },
-    {
-      "Name": "Score",
-      "GroupName": "Other",
-      "Title": "Scoreboard",
-      "KeyboardCode": "tab",
-      "GamepadCode": "SwitchLeftMenu"
-    },
-    {
-      "Name": "Menu",
-      "GroupName": "Other",
+      "Name": "Q",
+      "GroupName": "TopDownController",
       "Title": null,
       "KeyboardCode": "Q",
-      "GamepadCode": "SwitchRightMenu"
+      "GamepadCode": "None"
     },
     {
-      "Name": "Chat",
-      "GroupName": "Other",
+      "Name": "Mouse1",
+      "GroupName": "TopDownController",
       "Title": null,
-      "KeyboardCode": "enter",
+      "KeyboardCode": "MOUSE1",
+      "GamepadCode": "None"
+    },
+    {
+      "Name": "Mouse2",
+      "GroupName": "TopDownController",
+      "Title": null,
+      "KeyboardCode": "MOUSE2",
+      "GamepadCode": "None"
+    },
+    {
+      "Name": "Mouse3",
+      "GroupName": "TopDownController",
+      "Title": null,
+      "KeyboardCode": "MOUSE3",
+      "GamepadCode": "None"
+    },
+    {
+      "Name": "Forward",
+      "GroupName": "FirstPersonController",
+      "Title": null,
+      "KeyboardCode": "W",
       "GamepadCode": "None"
     }
   ],
