Enhance player and UI components: add selectable types, improve selection handling, and update styles for better usability

--- a/ProjectSettings/Input.config
+++ b/ProjectSettings/Input.config
@@ -97,6 +97,13 @@
       "Title": null,
       "KeyboardCode": "W",
       "GamepadCode": "None"
+    },
+    {
+      "Name": "R",
+      "GroupName": "Testing",
+      "Title": null,
+      "KeyboardCode": "R",
+      "GamepadCode": "None"
     }
   ],
   "__guid": "476becd2-e1c0-48e0-8bb3-340eab72d256",
